--- a/test/fixtures/stocks.yml
+++ b/test/fixtures/stocks.yml
@@ -4,22 +4,22 @@ one:
   code: 1
   name: MyString
   market: MyString
-  price: 1
-  previousprice: 1
-  volume: 1
-  previousvolume: 1
-  opening: 1
-  high: 1
-  low: 1
+  price: MyString
+  previousprice: MyString
+  volume: MyString
+  opening: MyString
+  high: MyString
+  low: MyString
+  chart: MyString
 
 two:
   code: 1
   name: MyString
   market: MyString
-  price: 1
-  previousprice: 1
-  volume: 1
-  previousvolume: 1
-  opening: 1
-  high: 1
-  low: 1
+  price: MyString
+  previousprice: MyString
+  volume: MyString
+  opening: MyString
+  high: MyString
+  low: MyString
+  chart: MyString
