--- a/test/fixtures/pieces.yml
+++ b/test/fixtures/pieces.yml
@@ -2,8 +2,8 @@
 
 one:
   title: MyString
-  contents: MyText
+  contents: MyString
 
 two:
   title: MyString
-  contents: MyText
+  contents: MyString
